--- a/styles/routes/portfolio.css
+++ b/styles/routes/portfolio.css
@@ -1,10 +1,11 @@
 header {
-  @apply absolute top-0 left-0 w-full flex justify-between py-10 px-16 z-50 duration-700;
-  @apply md:py-10 md:px-24;
+  @apply absolute top-0 left-0 w-full flex justify-between p-3 z-50 duration-700;
+  @apply xs:py-10 xs:px-10 md:py-10 md:px-24;
 }
 
 header .logo {
-  @apply relative font-bold no-underline text-3xl uppercase tracking-wider duration-700 text-white;
+  @apply relative font-bold no-underline text-xl uppercase tracking-wider duration-700 text-white;
+  @apply xs:text-2xl md:text-3xl;
 }
 
 header #toggle {
@@ -15,8 +16,8 @@ header #toggle {
 
 .banner {
   background: url("~/images/landing.jpg");
-  @apply relative w-[767px] min-h-screen pt-24 px-12 pb-36 bg-cover flex items-center duration-500 z-20;
-  @apply md:bg-right-bottom md:w-full md:p-24;
+  @apply relative min-h-screen bg-cover bg-bottom p-3 flex items-center duration-500 z-20;
+  @apply xs:pt-24 xs:px-12 xs:pb-36 xs:w-[639px] md:bg-right-bottom md:w-full md:p-24;
 }
 
 .banner.active header #toggle::before {
@@ -50,8 +51,8 @@ header #toggle {
 }
 
 #navigation ul li a {
-  @apply text-white no-underline inline-block text-2xl font-semibold uppercase my-1 mx-0;
-  @apply md:text-3xl;
+  @apply text-white no-underline inline-block text-xl font-semibold uppercase my-1 mx-0;
+  @apply xs:text-2xl md:text-3xl;
 }
 
 .content {
@@ -78,8 +79,8 @@ header #toggle {
 }
 
 .sci {
-  @apply absolute bottom-16 flex-row flex;
-  @apply md:absolute md:flex md:flex-col md:right-24 md:bottom-[initial];
+  @apply absolute bottom-6 flex-row flex;
+  @apply xs:bottom-16 md:absolute md:flex md:flex-col md:right-24 md:bottom-[initial];
 }
 
 .sci li {
